<resources>
    <string name="app_name">WeSH</string>
    <string name="splash_sub_title">We Save Heart</string>
    <string name="main_my_task">나의 일정</string>
    <string name="main_menu_1">나의\n정보</string>
    <string name="main_menu_2">주변\n병원</string>
    <string name="main_menu_3">복용 약\n알람</string>

    <string name="info_title">나의 정보</string>
    <string name="info_subtitle_1">스텐트 시술일</string>
    <string name="info_subtitle_2">자주 찾는 병원</string>
    <string name="info_subtitle_3">병력</string>
    <string name="info_subtitle_4">공유 연락처</string>

    <string name="emer_title">긴급 메뉴</string>
    <string name="emer_menu_1_normal">긴급 호출</string>
    <string name="emer_menu_1_pressed">호출 취소</string>
    <string name="emer_menu_2">자동심장충격기 위치</string>
    <string name="emer_menu_3">심폐소생술</string>
    <string name="emer_menu_4">자동심장충격기 사용법</string>

    <string name="calling_title_emerency">응급출동\n호출중입니다.</string>
    <string name="calling_title_normal">응급출동을 위해\n화면을 빠르게 두번\n터치해주세요.</string>

    <string name="cpr_title">심폐소생술</string>
    <string name="cpr_sequence_1">반응의 확인</string>
    <string name="cpr_sequence_2">119신고</string>
    <string name="cpr_sequence_3">응급의료전화상담원 지시에\n의한 가슴압박 소생술</string>
    <string name="cpr_sequence_4">호흡 확인</string>
    <string name="cpr_sequence_5">가슴압박 시행</string>
    <string name="cpr_sequence_6">회복자세</string>
    <string name="cpr_description_1">
        "현장의 안전을 확인한 뒤에 환자에게 다가가 어깨를 가볍게 두드리며, 큰 목소리로 "여보세요, 괜찮으세요?" 라고 물어본다. 의식이 있다면 환자는 대답을 하거나 움직이거나 또는 신음 소리를 내는 것과 같은 반응을 나타낸다. 반응이 없다면 심정지의 가능성이 높다고 판단해야 한다."
    </string>
    <string name="cpr_description_2">
        "환자의 반응이 없다면 즉시 큰 소리로 주변 사람에게 119 신고를 요청한다. 주변에 아무도 없는 경우에는 직접 119에 신고한다. 만약 주위에 심장충격기(자동제세동기)가 비치되어 있다면 즉시 가져와 사용해야 한다."
    </string>
    <string name="cpr_description_3">
        "심폐소생술에 익숙하지 않은 일반인은 신속하게 119에 신고함으로써 도움을 받을 수 있다. 신고를 접수한 응급의료전화 상담원은 전화를 스피커폰 상태로 전환시킨 뒤에 신고자가 심정지 상태를 확인하고 가슴압박 소생술을 시행할 수 있도록 도와준다."
    </string>
    <string name="cpr_description_4">
        "쓰러진 환자의 얼굴과 가슴을 10초 이내로 관찰하여 호흡이 있는지를 확인한다. 환자의 호흡이 없거나 비정상적이라면 심정지가 발생한 것으로 판단한다. 일반인은 비정상적인 호흡 상태를 정확히 평가하기 어렵기 때문에 응급 의료 전화상담원의 도움을 받는 것이 바람직하다."
    </string>
    <string name="cpr_description_5">
        "환자를 바닥이 단단하고 평평한 곳에 등을 대고 눕힌 뒤에 가슴뼈(흉골)의 아래쪽 절반 부위에 깍지를 낀 두 손의 손바닥 뒤꿈치를 댄다. 손가락이 가슴에 닿지 않도록 주의하면서, 양팔을 쭉 편 상태로 체중을 실어서 환자의 몸과 수직이 되도록 가슴을 압박하고, 압박된 가슴은 완전히 이완되도록 한다. 가슴 압박은 성인에서 분당 100~120회의 속도와 약 5cm 깊이(소아 4~5 cm)로 강하고 빠르게 시행한다. '하나', '둘', '셋', …, '서른'하고 세어가면서 규칙적으로 시행하며, 환자가 회복되거나 119 구급대가 도착할 때까지 지속한다. 심정지 초기에는 가슴압박만을 시행하는 가슴압박 소생술과 인공호흡을 함께 실시하는 심폐소생술의 효과가 비슷하기 때문에 일반인 목격자는 지체 없이 가슴압박 소생술을 시행해야 한다."
    </string>
    <string name="cpr_description_6">
        "가슴압박 소생술을 시행하던 중에 환자가 소리를 내거나 움직이면, 호흡도 회복되었는지 확인한다. 호흡이 회복되었다면, 환자를 옆으로 돌려 눕혀 기도(숨길)가 막히는 것을 예방한다. 그 후 환자의 반응과 호흡을 관찰해야 한다. 환자의 반응과 정상적인 호흡이 없어진다면 심정지가 재발한 것이므로 신속히 가슴압박과 인공호흡을 다시 시작한다."
    </string>


    <string name="aed_title">자동 심장충격기 사용법</string>
    <string name="aed_sequence_1">전원 켜기</string>
    <string name="aed_sequence_2">두 개의 패드 부착</string>
    <string name="aed_sequence_3">심장리듬 분석</string>
    <string name="aed_sequence_4">심장충격(제세동) 시행</string>
    <string name="aed_sequence_5">즉시 심폐소생술 다시 시행</string>

    <string name="aed_description_1">
        "심장충격기(자동제세동기)는 반응과 정상적인 호흡이 없는 심정지 환자에게만 사용해야 하며, 심폐소생술 시행 중에 심장충격기(자동제세동기)가 도착하면 지체 없이 적용해야 한다. 먼저 심장충격기(자동제세동기)를 심폐소생술에 방해가 되지않는 위치에 놓은 뒤에 전원 버튼을 누른다."
    </string>
    <string name="aed_description_2">
        "패드 1 : 오른쪽 빗장뼈 아래 | 패드 2 : 왼쪽 젖꼭지 아래의 중간겨드랑선 패드 부착부위에 이물질이 있다면 제거하며, 패드와 심장충격기(자동제세동기) 본체가 분리되어 있는 경우에는 연결한다."
    </string>
    <string name="aed_description_3">
        "'분석 중…'이라는 음성 지시가 나오면, 심폐소생술을 멈추고 환자에게서 손을 뗀다. 심장충격(제세동)이 필요한 경우라면 "심장충격(제세동)이 필요합니다"라는 음성 지시와 함께 심장충격기(자동제세동기) 스스로 설정된 에너지로 충전을 시작한다. 심장충격기(자동제세동기)의 충전은 수 초 이상 소요되므로 가능한 가슴압박을 시행한다. 심장충격(제세동)이 필요 없는 경우에는 "환자의 상태를 확인하고, 심폐소생술을 계속 하십시오"라는 음성 지시가 나오며, 이 경우에는 즉시 심폐소생술을 시작한다."
    </string>
    <string name="aed_description_4">
        "심장충격(제세동)이 필요한 경우에만 심장충격(제세동) 버튼이 깜박이기 시작한다. 깜박이는 버튼을 눌러 심장충격(제세동)을 시행한다. 심장충격(제세동) 버튼을 누르기 전에는 반드시 다른 사람이 환자에게서 떨어져 있는지 확인하여야 한다."
    </string>
    <string name="aed_description_5">
        "심장충격(제세동)을 실시한 뒤에는 즉시 가슴압박과 인공호흡을 30:2로 다시 시작한다. 심장충격기(자동제세동기)는 2분마다 심장리듬을 반복해서 분석하며, 이러한 심장충격기(자동제세동기)의 사용 및 심폐소생술의 시행은 119 구급대가 현장에 도착할 때까지 지속되어야 한다."
    </string>

    <string name="msg_contents">
        긴급한 상황으로 응급호출을 시작했습니다.\n연락을 취해 도움을 요청해주세요.
    </string>

</resources>
