<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmergencyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:text="@string/emer_title"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_weight="1"
        android:layout_width="1dp"
        android:layout_height="0dp"/>

    <androidx.cardview.widget.CardView
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:onClick="callEmergency"
        android:elevation="0dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/emer_menu_1_normal"
            android:layout_gravity="center"
            android:padding="16dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:clickable="true"
        android:onClick="getLocation"
        android:elevation="0dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/emer_menu_2"
            android:layout_gravity="center"
            android:padding="16dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:clickable="true"
        android:onClick="howToCPR"
        android:elevation="0dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/emer_menu_3"
            android:layout_gravity="center"
            android:padding="16dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:clickable="true"
        android:onClick="getUsage"
        android:elevation="0dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/emer_menu_4"
            android:layout_gravity="center"
            android:padding="16dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>

    <View
        android:layout_weight="1"
        android:layout_width="1dp"
        android:layout_height="0dp"/>

</LinearLayout>