<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="?attr/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.Toolbar>

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            app:todayLabelColor="@color/colorPrimary"
            app:type="one_day_picker"
            app:headerColor="@color/colorWhite"
            app:selectionColor="@color/colorPrimary"
            app:abbreviationsBarColor="@color/colorLightGray"
            app:headerLabelColor="@color/colorBlack"
            android:layout_height="wrap_content">

        </com.applandeo.materialcalendarview.CalendarView>

        <View
            android:background="@color/colorLightGray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:padding="8dp"
            android:text="@string/main_my_task"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/list_view"
            android:layout_weight="1"
            android:dividerHeight="6dp"
            android:divider="@color/colorWhite"
            android:background="@color/colorWhite"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="6dp"
                app:contentPadding="8dp"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/main_menu_1"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_main_icon_1"
                        android:layout_marginTop="15dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="6dp"
                app:contentPadding="8dp"
                android:layout_marginHorizontal="16dp"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/main_menu_2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_main_icon_2"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="6dp"
                app:contentPadding="8dp"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/main_menu_3"

                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_main_icon_3"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>